; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/stm/extr_dw_mipi_dsi-stm.c_dw_mipi_dsi_stm_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/stm/extr_dw_mipi_dsi-stm.c_dw_mipi_dsi_stm_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.platform_device = type { i32 }
%struct.dw_mipi_dsi_stm = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.platform_device*)* @dw_mipi_dsi_stm_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @dw_mipi_dsi_stm_remove(%struct.platform_device* %0) #0 {
  %2 = alloca %struct.platform_device*, align 8
  %3 = alloca %struct.dw_mipi_dsi_stm*, align 8
  store %struct.platform_device* %0, %struct.platform_device** %2, align 8
  %4 = load %struct.platform_device*, %struct.platform_device** %2, align 8
  %5 = call %struct.dw_mipi_dsi_stm* @platform_get_drvdata(%struct.platform_device* %4)
  store %struct.dw_mipi_dsi_stm* %5, %struct.dw_mipi_dsi_stm** %3, align 8
  %6 = load %struct.dw_mipi_dsi_stm*, %struct.dw_mipi_dsi_stm** %3, align 8
  %7 = getelementptr inbounds %struct.dw_mipi_dsi_stm, %struct.dw_mipi_dsi_stm* %6, i32 0, i32 2
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @dw_mipi_dsi_remove(i32 %8)
  %10 = load %struct.dw_mipi_dsi_stm*, %struct.dw_mipi_dsi_stm** %3, align 8
  %11 = getelementptr inbounds %struct.dw_mipi_dsi_stm, %struct.dw_mipi_dsi_stm* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @clk_disable_unprepare(i32 %12)
  %14 = load %struct.dw_mipi_dsi_stm*, %struct.dw_mipi_dsi_stm** %3, align 8
  %15 = getelementptr inbounds %struct.dw_mipi_dsi_stm, %struct.dw_mipi_dsi_stm* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 4
  %17 = call i32 @regulator_disable(i32 %16)
  ret i32 0
}

declare dso_local %struct.dw_mipi_dsi_stm* @platform_get_drvdata(%struct.platform_device*) #1

declare dso_local i32 @dw_mipi_dsi_remove(i32) #1

declare dso_local i32 @clk_disable_unprepare(i32) #1

declare dso_local i32 @regulator_disable(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
